Added photo to about me page

--- a/aboutme.html
+++ b/aboutme.html
@@ -4,5 +4,7 @@ title: About Me
 permalink: /aboutme/
 ---
 
+<img class="profile-photo-aboutme" src="{{ "/photos/linkedinphoto.jpg" | prepend: site.baseurl }}" alt="Linh">
+
 <p>Hi! I'm Linh, a self-learning software engineer. I started coding at the age of 12 with simple HTML and CSS, making free layouts for a blogging platform called Xanga. Little did I know I was actually coding! I never actually Googled anything in terms of what the different parts of HTML/CSS did, what I did was purely based on trial and error. School became hectic and I had to put my hobby on hold. Fast forward to 2016, I became curious what else is out there after finishing my Master's degree. I came across CodeFirst:Girls whilst searching the web and signed up to their upcoming event in Fintech. From there I signed onto their Advanced Ruby course at level 39 which ran for 8 weeks. I found it difficult to really get to grips with coding in Ruby, however this only motivated me to continue after finishing the course! I then started to attend more events and workshops geared towards the tech industry, and soon realised that passion lies in software engineering! I am now working on becoming a better software engineer day by day and can't wait until I can make that leap! I am currently working on some side projects which you can visit by clicking here, and on FreeCodeCamp!</p>
 
