Changed my work page text

--- a/mywork.html
+++ b/mywork.html
@@ -4,12 +4,4 @@ title: My Work
 permalink: /mywork/
 ---
 
-This is the base Jekyll theme. You can find out more info about customizing your Jekyll theme, as well as basic Jekyll usage documentation at [jekyllrb.com](http://jekyllrb.com/)
-
-You can find the source code for the Jekyll new theme at:
-{% include icon-github.html username="jglovier" %} /
-[jekyll-new](https://github.com/jglovier/jekyll-new)
-
-You can find the source code for Jekyll at
-{% include icon-github.html username="jekyll" %} /
-[jekyll](https://github.com/jekyll/jekyll)
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius veritatis impedit vero recusandae, dignissimos eveniet atque doloremque ullam unde, consequuntur quas voluptas, tenetur pariatur quae minus hic incidunt facere, molestiae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi nulla assumenda accusamus esse obcaecati beatae, illum commodi ea ipsam dolores officiis dignissimos officia porro, fugit quisquam mollitia? Velit itaque, ducimus.</p>
