--- a/mywork.html
+++ b/mywork.html
@@ -4,4 +4,6 @@ title: My Work
 permalink: /mywork/
 ---
 
+<img class="work-preview" src="http://placehold.it/350x150"> <img class="work-preview" src="http://placehold.it/350x150"> 
+
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius veritatis impedit vero recusandae, dignissimos eveniet atque doloremque ullam unde, consequuntur quas voluptas, tenetur pariatur quae minus hic incidunt facere, molestiae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi nulla assumenda accusamus esse obcaecati beatae, illum commodi ea ipsam dolores officiis dignissimos officia porro, fugit quisquam mollitia? Velit itaque, ducimus.</p>
