Center my work page text

--- a/mywork.html
+++ b/mywork.html
@@ -6,7 +6,7 @@ permalink: /mywork/
 
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-md-6 my-work">
+			<div class="col-md-6 text-center">
 				<h4>Penguin Eats Game</h3>
 
 				<img class="work-preview" src="{{ "/photos/penguineats.gif" | prepend: site.baseurl }}" alt="Penguin Eats Game">
@@ -14,7 +14,7 @@ permalink: /mywork/
 					<p>This is a continuing project I am working on with Tomasz based on in-browser games using Ruby. We used a game framework called phaser and Ruby to Javascript compiler Opal.</p>
 			</div>
 			
-			<div class="col-md-6">
+			<div class="col-md-6 text-center">
 				<h4>Other Project</h3>
 
 				<img class="work-preview" src="http://placehold.it/450x250">
