--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
     <br>
     <br>
 			<h3 class="intro">
-        Hello! I’m Linh, a self-learning software developer. 
+        Hello! I’m Linh, a self-taught software developer.
       </h3>
 </div>
         
