Changed link colours

--- a/aboutme.html
+++ b/aboutme.html
@@ -22,7 +22,7 @@ permalink: /aboutme/
 				</p>
 					
 				<p>	
-					Fast forward to 2016, I became curious what else is out there after finishing my Master's degree. I came across CodeFirst:Girls whilst searching the web and signed up to their upcoming event in Fintech. From there I signed onto their Advanced Ruby course at level 39 which ran for 8 weeks. I found it difficult to really get to grips with coding in Ruby, however this only motivated me to continue after finishing the course!
+					Fast forward to 2016, I became curious what else is out there after finishing my Master's degree. I came across <a href="http://www.codefirstgirls.org.uk/">CodeFirst:Girls</a> whilst searching the web and signed up to their upcoming event in Fintech. From there I signed onto their Advanced Ruby course at level 39 which ran for 8 weeks. I found it difficult to really get to grips with coding in Ruby, however this only motivated me to continue after finishing the course!
 				</p>
 
 				<p>
