Centered subheading in about me page

--- a/aboutme.html
+++ b/aboutme.html
@@ -15,7 +15,7 @@ permalink: /aboutme/
 					I am a junior Ruby developer keen to contribute to the right company. I have taught myself how to code in my spare time and currently I am a volunteer instructor at <a href="http://www.codefirstgirls.org.uk/">CodeFirst:Girls</a> teaching young professional women HTML and CSS. I am a committed and a fast learning individual who’s ready to tackle on any challenges.
 				</p>
 				
-				<h2>History</h2>
+				<h2 class="aboutme-subheading">History</h2>
 
 				<p>
 					I started coding at the age of 12 with simple HTML and CSS, making free layouts for a blogging platform called <a href="www.xanga.com">Xanga</a>. Little did I know I was actually coding! I never actually Googled anything in terms of what the different parts of HTML/CSS did, what I did was purely based on trial and error. School became hectic and I had to put my hobby on hold.
