Added http to FCC link

--- a/aboutme.html
+++ b/aboutme.html
@@ -26,7 +26,7 @@ permalink: /aboutme/
 				</p>
 
 				<p>
-					I then started to attend more events and workshops geared towards the tech industry, and soon realised that my passion lies in software engineering! I am now working on becoming a better software engineer day by day and can't wait until I can make that leap! I am currently working on some side projects which you can visit by clicking <a href="{{ site.baseurl }}/mywork">here</a>, and on <a href="www.freecodecamp.com">FreeCodeCamp</a>!
+					I then started to attend more events and workshops geared towards the tech industry, and soon realised that my passion lies in software engineering! I am now working on becoming a better software engineer day by day and can't wait until I can make that leap! I am currently working on some side projects which you can visit by clicking <a href="{{ site.baseurl }}/mywork">here</a>, and on <a href="http://www.freecodecamp.com">FreeCodeCamp</a>!
 				</p>
 		</div>
 	</div>
