--- a/mywork.html
+++ b/mywork.html
@@ -7,15 +7,15 @@ permalink: /mywork/
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-6 text-center">
-				<h4>Penguin Eats Game</h3>
+				<h3 class="mywork-subheading">Penguin Eats Game</h3>
 
 				<img class="work-preview" src="{{ "/photos/penguineats.gif" | prepend: site.baseurl }}" alt="Penguin Eats Game">
 				
-					<p>This is a continuing project I am working on with Tomasz based on in-browser games using Ruby. We used a game framework called phaser and Ruby to Javascript compiler Opal.</p>
+					<p>This is a continuing project I am working on with <a href="https://github.com/taw">Tomasz Wegrzanowski</a> based on in-browser games using Ruby. We used a game framework called <a href="http://http://phaser.io">phaser</a> and Ruby to Javascript compiler <a href="http://http://opalrb.org">Opal</a>.</p>
 			</div>
 			
 			<div class="col-md-6 text-center">
-				<h4>Other Project</h3>
+				<h3 class="mywork-subheading">Other Project</h3>
 
 				<img class="work-preview" src="http://placehold.it/450x250">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius veritatis impedit vero recusandae, dignissimos eveniet atque doloremque ullam unde, consequuntur quas voluptas, tenetur pariatur quae minus hic incidunt facere, molestiae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi nulla assumenda accusamus esse obcaecati beatae, illum commodi ea ipsam dolores officiis dignissimos officia porro, fugit quisquam mollitia? Velit itaque, ducimus.</p>
