--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,37 @@ permalink: /contact/
 
 This is the base Jekyll theme. You can find out more info about customizing your Jekyll theme, as well as basic Jekyll usage documentation at [jekyllrb.com](http://jekyllrb.com/)
 
-You can find the source code for the Jekyll new theme at:
-{% include icon-github.html username="jglovier" %} /
-[jekyll-new](https://github.com/jglovier/jekyll-new)
+<div class="container-fluid">
+	<div class="row">
+			<form class="form-horizontal">
 
-You can find the source code for Jekyll at
-{% include icon-github.html username="jekyll" %} /
-[jekyll](https://github.com/jekyll/jekyll)
+			  <div class="form-group">
+			    <label for="name" class="col-md-offset-2 col-md-2 control-label">Name</label>
+			    <div class="col-md-4">
+			 	   <input type="name" class="form-control" id="name" placeholder="Name">
+			 	</div>
+			  </div>
+
+			  <div class="form-group">
+			    <label for="email" class="col-md-offset-2 col-md-2 control-label">Email</label>
+			    <div class="col-md-4">
+			      <input type="email" class="form-control" id="email" placeholder="Email">
+			    </div>
+			  </div>
+
+			  <div class="form-group">
+			    <label for="message" class="col-md-offset-2 col-md-2 control-label">Message</label>
+			    <div class="col-md-4">
+			      <input type="message" class="form-control message-dimension" id="message" placeholder="Message">
+			    </div>
+			  </div>
+
+			  <div class="form-group">
+			    <div class="col-md-offset-4 col-md-4">
+			      <button type="submit" class="btn btn-default btn-block">Submit</button>
+			    </div>
+			  </div>
+
+			</form>
+	</div>
+</div>
