Updated contact form and added form icons

--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,28 @@ permalink: /contact/
 ---
 
 This is the base Jekyll theme. You can find out more info about customizing your Jekyll theme, as well as basic Jekyll usage documentation at [jekyllrb.com](http://jekyllrb.com/)
-
+<br><br><br><br>
 <div class="container-fluid">
 	<div class="row">
-			<form class="form-horizontal">
+
+
+	<form action="https://formspree.io/pinguinlinh@gmail.com" method="POST">
+	    
+		<label for="name"><span>Name</span>
+	    <input type="text" id="email" name="name" placeholder="Name"></label>
+
+	    <label for="email">Email</label>
+	    <input type="email" id="email" name="_replyto" placeholder="Email">
+		
+		<label for="message">Message</label>
+		<textarea id="message" name="message" placeholder="Message" class="message"></textarea>
+
+	    <button type="submit" value="Send">Submit</button>
+	</form>
+
+
+
+			<!-- <form class="form-horizontal">
 
 			  <div class="form-group">
 			    <label for="name" class="col-md-offset-2 col-md-2 control-label">Name</label>
@@ -37,6 +55,6 @@ This is the base Jekyll theme. You can find out more info about customizing your
 			    </div>
 			  </div>
 
-			</form>
+			</form> -->
 	</div>
 </div>
