Added icons to contact form

--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,11 @@ title: Contact
 permalink: /contact/
 ---
 
-This is the base Jekyll theme. You can find out more info about customizing your Jekyll theme, as well as basic Jekyll usage documentation at [jekyllrb.com](http://jekyllrb.com/)
-<br><br><br><br>
 <div class="container-fluid">
 	<div class="row">
-
+		<div class="col-lg-offset-3 col-lg-6 col-lg-offset-3">
+			<p>Get in contact with me by using the form below or just send an email to lnguyenmy1@gmail.com.</p>
+		
 
 	<form action="https://formspree.io/pinguinlinh@gmail.com" method="POST">
 	    
@@ -56,5 +56,6 @@ This is the base Jekyll theme. You can find out more info about customizing your
 			  </div>
 
 			</form> -->
+			</div>
 	</div>
 </div>
