Cleaned up contact css

--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,8 @@ permalink: /contact/
 
 	<form action="https://formspree.io/pinguinlinh@gmail.com" method="POST">
 	    
-		<label for="name"><span>Name</span>
-	    <input type="text" id="email" name="name" placeholder="Name"></label>
+		<label for="name">Name</label>
+	    <input type="text" id="email" name="name" placeholder="Name">
 
 	    <label for="email">Email</label>
 	    <input type="email" id="email" name="_replyto" placeholder="Email">
