--- a/mywork.html
+++ b/mywork.html
@@ -10,10 +10,15 @@ permalink: /mywork/
 				<h3 class="mywork-subheading">Penguin Eats Game</h3>
 
 				<img class="work-preview" src="{{ "/photos/penguineats.gif" | prepend: site.baseurl }}" alt="Penguin Eats Game">
-				
-					<p>This is a continuing project I am working on with <a href="https://github.com/taw">Tomasz Wegrzanowski</a> based on in-browser games using Ruby. We used a game framework called <a href="http://http://phaser.io">phaser</a> and Ruby to Javascript compiler <a href="http://http://opalrb.org">Opal</a>.</p>
+
+					<p>This is a continuing project I am working on with <a href="https://github.com/taw">Tomasz Wegrzanowski</a> based on in-browser games using Ruby. We used a game framework called <a href="http://http://phaser.io">phaser</a> and Ruby to Javascript compiler <a href="http://http://opalrb.org">Opal</a>. Play the game and check out the GitHub repository. You can play the game <a href="https://taw.github.io/phaser-opal-minigames/games/penguin_eats">here</a></p>
+
+					<ul>
+						<li><a href="https://taw.github.io/phaser-opal-minigames/games/penguin_eats">Play the game</a></li>
+						<li><a href="https://github.com/taw/phaser-opal-minigames">GitHub repository</a></li>
+					</ul>
 			</div>
-			
+
 			<div class="col-md-6 text-center">
 				<h3 class="mywork-subheading">Other Project</h3>
 
