Removed li for links to game and repo and replaced with paragraph

--- a/mywork.html
+++ b/mywork.html
@@ -11,12 +11,10 @@ permalink: /mywork/
 
 				<img class="work-preview" src="{{ "/photos/penguineats.gif" | prepend: site.baseurl }}" alt="Penguin Eats Game">
 
-					<p>This is a continuing project I am working on with <a href="https://github.com/taw">Tomasz Wegrzanowski</a> based on in-browser games using Ruby. We used a game framework called <a href="http://http://phaser.io">phaser</a> and Ruby to Javascript compiler <a href="http://http://opalrb.org">Opal</a>. Play the game and check out the GitHub repository. You can play the game <a href="https://taw.github.io/phaser-opal-minigames/games/penguin_eats">here</a></p>
+					<p>This is a continuing project I am working on with <a href="https://github.com/taw">Tomasz Wegrzanowski</a> based on in-browser games using Ruby. We used a game framework called <a href="http://http://phaser.io">phaser</a> and Ruby to Javascript compiler <a href="http://http://opalrb.org">Opal</a>.</p>
 
-					<ul>
-						<li><a href="https://taw.github.io/phaser-opal-minigames/games/penguin_eats">Play the game</a></li>
-						<li><a href="https://github.com/taw/phaser-opal-minigames">GitHub repository</a></li>
-					</ul>
+					<p><a href="https://taw.github.io/phaser-opal-minigames/games/penguin_eats">Play the game</a></p>
+					<p><a href="https://github.com/taw/phaser-opal-minigames">GitHub repository</a></p>
 			</div>
 
 			<div class="col-md-6 text-center">
