--- a/contact.html
+++ b/contact.html
@@ -7,20 +7,21 @@ permalink: /contact/
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-lg-offset-3 col-lg-6 col-lg-offset-3">
-			<p>Get in contact with me by using the form below or send an email to lnguyenmy1@gmail.com.</p>
-				<form action="https://formspree.io/pinguinlinh@gmail.com" method="POST">
-				    
+			<h4 class="contact-text"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i>Get in touch:
+				<h4 class="contact-text"><a href="mailto:{{ site.email }}">lnguyenmy1@gmail.com</a></h4>
+				<!-- <form action="https://formspree.io/pinguinlinh@gmail.com" method="POST">
+
 					<label for="name">Name</label>
 				    <input type="text" id="email" name="name" placeholder="Name">
 
 				    <label for="email">Email</label>
 				    <input type="email" id="email" name="_replyto" placeholder="Email">
-					
+
 					<label for="message">Message</label>
 					<textarea id="message" name="message" placeholder="Message" class="message"></textarea>
 
 				    <button type="submit" value="Send">Submit</button>
-				</form>
+				</form> -->
 		</div>
 	</div>
 </div>
