Removed photo from about me page

--- a/aboutme.html
+++ b/aboutme.html
@@ -6,9 +6,9 @@ permalink: /aboutme/
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-lg-offset-3 col-lg-6 col-lg-offset-3 text-center">
+<!--     <div class="col-lg-offset-3 col-lg-6 col-lg-offset-3 text-center">
       <img class="profile-photo-aboutme" src="{{ "/photos/linkedinphoto.jpg" | prepend: site.baseurl }}" alt="Linh">
-    </div>
+    </div> -->
 
     <div class="col-lg-offset-3 col-lg-6 col-lg-offset-3 text-justify">
         <p>
